JumpScript/tests/baselines/reference/deduplicateImportsInSystem.errors.txt
tests/cases/compiler/deduplicateImportsInSystem.jump(1,17): error TS2307: Cannot find module 'f1'.
tests/cases/compiler/deduplicateImportsInSystem.jump(2,17): error TS2307: Cannot find module 'f2'.
tests/cases/compiler/deduplicateImportsInSystem.jump(3,17): error TS2307: Cannot find module 'f3'.
tests/cases/compiler/deduplicateImportsInSystem.jump(4,17): error TS2307: Cannot find module 'f2'.
tests/cases/compiler/deduplicateImportsInSystem.jump(5,17): error TS2307: Cannot find module 'f2'.
tests/cases/compiler/deduplicateImportsInSystem.jump(6,17): error TS2307: Cannot find module 'f1'.
tests/cases/compiler/deduplicateImportsInSystem.jump(8,1): error TS2304: Cannot find name 'console'.


==== tests/cases/compiler/deduplicateImportsInSystem.jump (7 errors) ====
    import {A} from "f1";
                    ~~~~
!!! error TS2307: Cannot find module 'f1'.
    import {B} from "f2";
                    ~~~~
!!! error TS2307: Cannot find module 'f2'.
    import {C} from "f3";
                    ~~~~
!!! error TS2307: Cannot find module 'f3'.
    import {D} from 'f2';
                    ~~~~
!!! error TS2307: Cannot find module 'f2'.
    import {E} from "f2";
                    ~~~~
!!! error TS2307: Cannot find module 'f2'.
    import {F} from 'f1';
                    ~~~~
!!! error TS2307: Cannot find module 'f1'.
    
    console.log(A + B + C + D + E + F)
    ~~~~~~~
!!! error TS2304: Cannot find name 'console'.